# MAI-cpp-oop-labs-2

./: .gitignore  README.md
.cache/clangd/index/: func.cpp.F0BFD9ED9CA52BAA.idx  func.h.040AAB066D79CA8E.idx  main.cpp.930CFDAA6DADB30D.idx  test_func.cpp.D15CB2C49CCF750D.idx
.devcontainer/: Dockerfile  devcontainer.json
labs/lab_oop_1/: CMakeLists.txt
labs/lab_oop_1/include/: func.h
labs/lab_oop_1/src/: func.cpp  main.cpp
labs/lab_oop_1/tests/: test_func.cpp
labs/lab_oop_2/: CMakeLists.txt
labs/lab_oop_2/include/: array.h  thirteen.h
labs/lab_oop_2/src/: array.cpp  main.cpp  thirteen.cpp
labs/lab_oop_2/tests/: test_array.cpp  test_thirteen.cpp
